--- a/project-bolt-sb1-LocalAI_X/project/index.html
+++ b/project-bolt-sb1-LocalAI_X/project/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LocalAI+ - Production-Ready Local LLM API Platform</title>
+    
+    <!-- Preconnect to APIs -->
+    <link rel="preconnect" href="http://localhost:8000">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
+    <!-- Preload critical resources -->
+    <link rel="modulepreload" href="/src/main.tsx" />
+    <link rel="modulepreload" href="/src/App.tsx" />
+    <link rel="preload" href="/fonts/inter-var.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/Image_navbar_logo.png" as="image" />
   </head>
   <body>
     <div id="root"></div>
